fix_x_scroll => cards are too big on mobile after padding/margin left due to space that sidebar needs

--- a/apps/client/src/styles/globals.css
+++ b/apps/client/src/styles/globals.css
@@ -9,7 +9,7 @@
 }
 
 .pad__app {
-  @apply px-[20px] sm:px-[50px];
+  @apply px-[20px] sm:px-[40px];
 }
 
 .li__drop {
